applications/openlookeng-summary/en/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-summary-en
  name: openlookeng-summary-en
