applications/openlookeng-summary/en/oauth-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=gitee
            - --email-domain=*
            - --gitee-org=opensourceway
            - --proxy-prefix=/en/2021summary/oauth2
            - --skip-auth-regex=^/en/2021summary/agreement_ch.html
            - --skip-auth-regex=^/en/2021summary/agreement_en.html
            - --upstream=http://openlookeng-summary.openlookeng-summary-zh.svc.cluster.local
            - --http-address=0.0.0.0:4180
            - --cookie-expire=6h0m0s
            - --set-xauthrequest=true
            - --custom-templates-dir=/bin/static/login
            - --custom-templates-sign-in=lookeng-en.html
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:662b2634654d5fb1aa65a59da62728c9184a4a9c
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
