applications/openlookeng-summary/en/summary-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openlookeng-summary
spec:
  selector:
    component: openlookeng-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
